# fastapi_test_ci

./: .gitignore  pyproject.toml  requirements.dev.txt  requirements.test.txt
.github/workflows/: docker-image.yml
docker/: prod.Dockerfile  test.Dockerfile
src/: .env.template  config.py  database.py  main.py  models.py  queries.py
tests/: conftest.py  test_app.py
