[project]
name = "FastAPI_CI_test"
version = "0.1.0"
description = "FastAPI test application to test CI"
readme = ""
requires-python = "==3.8.20"
dependencies = [
    "aiosqlite>=0.20.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.2",
    "flake8-bugbear>=24.12.12",
    "flake8-pie>=0.16.0",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-coverage>=0.0",
    "ruff>=0.11.5",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = 'function'


[tool.ruff.lint]
select = ["B", "I", "PIE"]
